syntax = "proto3";
package wiradata.inventories;

option go_package = "pb/inventories;inventories";

import "google/protobuf/timestamp.proto";

message Branch {
  string id = 1;
  string company_id = 2;
  string code = 3;
  string name = 4;
  google.protobuf.Timestamp created_at = 5;
  string created_by = 6;
  google.protobuf.Timestamp updated_at = 7;
  string updated_by = 8;
}